# ros2_kdl_package

./: CMakeLists.txt  README.md  package.xml
action/: LinearTrajectory.action
bags/ctrl_bag/: ctrl_bag_0.db3  metadata.yaml
bags/ctrlnull_bag/: ctrlnull_bag_0.db3  metadata.yaml
config/: kdl_params.yaml
include/: kdl_control.h  kdl_planner.h  kdl_robot.h
include/ros2_kdl_package/: visibility_control.h
launch/: kdl_action_server.launch.py  ros2_kdl.launch.py
scripts/: compare.py
src/: kdl_control.cpp  kdl_planner.cpp  kdl_robot.cpp  ros2_kdl_action_client.cpp  ros2_kdl_action_server.cpp  ros2_kdl_node.cpp
